[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/StorySelect.gd" type="Script" id=1]
[ext_resource path="res://Assets/gui_themes/next_buttons.tres" type="Theme" id=2]
[ext_resource path="res://Assets/gui_themes/ui_buttons.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Buttons/Spritesheet_Animation_UI_Pumpkin_Arrow_Forward.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 70, 6, 20, 20 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 4 )
region_rect = Rect2( 38, 8, 20, 18 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 4 )
region_rect = Rect2( 6, 7, 20, 19 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NextScene" type="Button" parent="CenterContainer"]
margin_left = 515.0
margin_top = 130.0
margin_right = 765.0
margin_bottom = 210.0
rect_min_size = Vector2( 250, 80 )
rect_pivot_offset = Vector2( 125, 40 )
theme = ExtResource( 2 )
text = "Next"

[node name="StorySelect" type="HBoxContainer" parent="."]
anchor_left = 0.1
anchor_top = 0.3
anchor_right = 0.9
anchor_bottom = 0.3
rect_min_size = Vector2( 750, 340 )
custom_constants/separation = 20
alignment = 1

[node name="StoryMinus" type="Button" parent="StorySelect"]
margin_top = 120.0
margin_right = 100.0
margin_bottom = 220.0
rect_min_size = Vector2( 100, 100 )
size_flags_vertical = 4
theme = ExtResource( 3 )

[node name="StoryLabel" type="Label" parent="StorySelect"]
margin_left = 120.0
margin_top = 120.0
margin_right = 904.0
margin_bottom = 220.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "Give me a random story!"
align = 1
valign = 1

[node name="StoryPlus" type="Button" parent="StorySelect"]
margin_left = 924.0
margin_top = 120.0
margin_right = 1024.0
margin_bottom = 220.0
rect_min_size = Vector2( 100, 100 )
size_flags_vertical = 4
theme = ExtResource( 3 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )

[connection signal="pressed" from="CenterContainer/NextScene" to="." method="_on_NextScene_pressed"]
[connection signal="pressed" from="StorySelect/StoryMinus" to="." method="_on_StoryMinus_pressed"]
[connection signal="pressed" from="StorySelect/StoryPlus" to="." method="_on_StoryPlus_pressed"]
